[package]
name = "trawler"
version = "0.7.0-alpha.5"
edition = "2018"

description = "A workload generator that emulates the traffic to lobste.rs"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]


documentation = "https://docs.rs/trawler"
homepage = "https://github.com/jonhoo/trawler"
repository = "https://github.com/jonhoo/trawler.git"

keywords = ["workload-generator", "traffic"]
categories = ["web-programming", "command-line-utilities", "development-tools::profiling", "simulation", "science"]

license = "MIT/Apache-2.0"

build = "data-import.rs"

[badges]
travis-ci = { repository = "jonhoo/tsunami" }
maintenance = { status = "actively-developed" }

[features]
cli = ["clap", "hyper", "cookie", "headers", "url", "regex", "lazy_static"]
default = ["cli"]

[dependencies]
slog = "2.0.6"
slog-term = "2.0.1"
libc = "0.2"
rand = "0.7.0"
rand_distr = "0.2"
zipf = "6.0.0"
hdrhistogram = "6.0.0"
histogram-sampler = "0.4"

crossbeam-channel = "0.4"
tokio = "=0.2.0-alpha.6"
futures-core-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"

clap = { version = "2.25.0", optional = true }
hyper = { version = "=0.13.0-alpha.4", features = [ "unstable-stream" ], optional = true }
cookie = { version = "0.12", optional = true }
headers = { version = "0.2", optional = true }
url = { version = "2.0", optional = true }
regex = { version = "1.0", optional = true }
lazy_static = { version = "1.0.0", optional = true }

[build-dependencies]
glob = "0.3"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "trawler"
path = "src/bin/main.rs"
required-features = ["cli"]
