[package]
name = "trawler"
version = "0.9.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A workload generator that emulates the traffic to lobste.rs"
repository = "https://github.com/jonhoo/trawler.git"

keywords = ["workload-generator", "traffic"]
categories = ["web-programming", "command-line-utilities", "development-tools::profiling", "simulation", "science"]

build = "data-import.rs"

[badges]
travis-ci = { repository = "jonhoo/trawler" }
maintenance = { status = "experimental" }

[features]
cli = ["clap", "hyper", "cookie", "http", "url", "regex", "lazy_static"]
default = ["cli"]

[dependencies]
crossbeam-channel = "0.4"
futures-core = "0.3.0"
futures-util = "0.3.0"
hdrhistogram = "7"
histogram-sampler = "0.4"
libc = "0.2"
rand = "0.7.0"
rand_distr = "0.2"
slog = "2.0.6"
slog-term = "2.0.1"
tokio = { version = "0.2.0", features = ["rt-threaded", "io-driver", "time"] }
tower-make = "0.3"
tower-service = "0.3"
zipf = "6.0.0"

clap = { version = "2.25.0", optional = true }
cookie = { version = "0.13", optional = true }
http = { version = "0.2", optional = true }
hyper = { version = "0.13", features = [ "stream" ], optional = true }
lazy_static = { version = "1.0.0", optional = true }
regex = { version = "1.0", optional = true }
url = { version = "2.0", optional = true }

[build-dependencies]
glob = "0.3"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "trawler"
path = "src/bin/main.rs"
required-features = ["cli"]
